After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702457 - rtpmp2tdepay: unable to depay MPEG2-TS RTP streams from GStreamer 0.10
rtpmp2tdepay: unable to depay MPEG2-TS RTP streams from GStreamer 0.10
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-17 12:46 UTC by Jens Georg
Modified: 2013-06-17 14:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpmp2tdepay: Support streams from GStreamer 0.10 (976 bytes, patch)
2013-06-17 12:46 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2013-06-17 12:46:57 UTC
The encoding name changed from MP2T-ES to MP2T (I suppose the latter is the
correct one). The thing is that with this change it's not possible to depay
streams made with 0.10 (with GStreamer SDK, Tizen or software like
gnome-dvb-daemon) cannot be depayloaded since no fitting depayloader can be
found.

I suggest re-adding the old encoding name for backwards compatiblity purpose
for some time.
Comment 1 Jens Georg 2013-06-17 12:46:59 UTC
Created attachment 247029 [details] [review]
rtpmp2tdepay: Support streams from GStreamer 0.10
Comment 2 Tim-Philipp Müller 2013-06-17 12:58:38 UTC
Heh, I thought we'd fixed that already, but seems that patch didn't land in 1.x:


commit 83adc3740e2985368980cb58a46c3ab28cc20264
Author: Michael Esemplare <mesempla@kablab.com>
Date:   Fri Feb 1 17:55:33 2013 -0800

    rtpmp2tdepay: fix caps for compatibility with spec and rtpmp2tpay from 1.0
    
    The encoding name is supposed to be MP2T according to RFC 3551 5.7, not
    MP2T-ES. The payloader in 1.0 was changed to produce that as per the
    spec, so let's accept the proper encoding-name in addition to the
    wrong one as well.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=693043
Comment 3 Jens Georg 2013-06-17 14:25:36 UTC
That's the other way round, right? Depayloading 1.0 streams in 0.10?
Comment 4 Tim-Philipp Müller 2013-06-17 14:33:58 UTC
True, it's just the same theme ("accept both variants for max. compatibility")
Comment 5 Tim-Philipp Müller 2013-06-17 14:43:39 UTC
Pushed, thanks!

 commit 745be945cea04ddb08a664dc7ce4fd4e09ba1b8e
 Author: Jens Georg <mail@jensge.org>
 Date:   Sat Jun 15 12:29:31 2013 +0200

    rtpmp2tdepay: accept mislabelled streams from GStreamer 0.10 as well
    
    The mp2t payloader in 0.10 mislabelled the streams as MP2T-ES
    instead of MP2T, so accept that as well for compatibility reasons.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=702457