rtpmp2tdepay: accept mislabelled streams from GStreamer 0.10 as well

The mp2t payloader in 0.10 mislabelled the streams as MP2T-ES
instead of MP2T, so accept that as well for compatibility reasons.

https://bugzilla.gnome.org/show_bug.cgi?id=702457

Conflicts:
	gst/rtp/gstrtpmp2tdepay.c