gst/rtp/gstrtpmp2tdepay.c
@@ -56,7 +56,8 @@ static GstStaticPadTemplate gst_rtp_mp2t_depay_sink_template =
     GST_STATIC_CAPS ("application/x-rtp, "
         "media = (string) \"video\", "
         "payload = (int) " GST_RTP_PAYLOAD_DYNAMIC_STRING ", "
-        "clock-rate = (int) [1, MAX ], " "encoding-name = (string) \"MP2T\";"
+        "clock-rate = (int) [1, MAX ], "
+        "encoding-name = (string) { MP2T, MP2T-ES } ;"
         /* All optional parameters
          *
          * "profile-level-id=[1,MAX]"
